2003-09-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.h:
	* libop/op_alloc_counter.c: change allocator by a backtracking
	  algorithm walking only through possible solution.

2003-09-26  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/tests/db_test.c: success must be silent
	* dae/oprofiled.c:
	* daemon/oprofiled.c:
	* libutil/op_deviceio.c:
	* libutil/op_deviceio.h: op_open_device(): remove unused parameter
	  fatal

2003-09-26  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/tests/file_tests.c: Fix some test: in some case the pathname
	  component must be valid since we lstat() them. Fix a segfault due
	  to missing ',' 

2003-09-26  John Levon  <levon@movementarian.org>

	* libdb/tests/Makefile.am:
	* libregex/tests/Makefile.am:
	* libutil/tests/Makefile.am: don't build tests
	unless "make check"

2003-09-26  John Levon  <levon@movementarian.org>

	* libutil/op_file.c: don't test for NULL path
	passed in, we want to crash here instead of
	in xstrdup

	* configure.in:
	* libutil/Makefile.am:
	* libutil/tests/Makefile.am:
	* libutil/tests/file_tests.c:
	* libutil/tests/string_tests.c: add some unit tests
	for libutil string and path handling

2003-09-26  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_debug.c: remove useless display interface
	* libdb/db_db_travel.c: remove callback interface
	* libdb/odb_hash.h: remove display/callback interface
	* libdb/db_test.cpp: move to tests subdir
	* libdb/Makefile.am: update according
	* libdb/tests: new dir
	* libdb/tests/.cvsignore:
	* libdb/tests/Makefile.am: new files
	* libdb/tests/db_test.cpp: shorter tests

	* libregex/mangled-name.txt:
	* libregex/regex_testc.cpp: move to ...
	* libregex/tests: new directory
	* libdb/Makefile.am: update according
	* libregex/tests/.cvsignore:
	* libregex/tests/Makefile.am: new files

2003-09-26  John Levon  <levon@movementarian.org>

	* libabi/abi_test.cpp:
	* libabi/op_import.cpp: small cleanups

2003-09-25  John Levon  <levon@movementarian.org>
