@@ -1,5 +1,10 @@
 2003-09-28  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libutil/op_file.c:
+	* libutil/tests/file_tests.c: honor posix "//" filename namespace
+
+2003-09-28  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libop/op_alloc_counter.h:
 	* libop/op_alloc_counter.c: change allocator by a backtracking
 	  algorithm walking only through possible solution.
